# multimodal_agents

./: doc_images.json  ideation.ipynb  jim.ipynb  pyproject.toml  qa_dataset_creation_agent.py  qa_results.csv  test_layout.json  upload_data.py
above_text/: above_text_0.txt  above_text_1.txt  above_text_100.txt  above_text_101.txt  above_text_102.txt  above_text_104.txt  above_text_105.txt  above_text_106.txt  above_text_107.txt  above_text_108.txt  above_text_109.txt  above_text_11.txt  above_text_110.txt  above_text_111.txt  above_text_112.txt  above_text_114.txt  above_text_115.txt  above_text_116.txt  above_text_117.txt  above_text_118.txt  above_text_119.txt  above_text_12.txt  above_text_120.txt  above_text_121.txt  above_text_122.txt  above_text_123.txt  above_text_124.txt  above_text_125.txt  above_text_126.txt  above_text_127.txt  above_text_128.txt  above_text_129.txt  above_text_13.txt  above_text_131.txt  above_text_132.txt  above_text_133.txt  above_text_134.txt  above_text_135.txt  above_text_136.txt  above_text_137.txt  (+519 more)
below_text/: below_text_0.txt  below_text_10.txt  below_text_100.txt  below_text_101.txt  below_text_102.txt  below_text_104.txt  below_text_107.txt  below_text_112.txt  below_text_115.txt  below_text_116.txt  below_text_118.txt  below_text_127.txt  below_text_129.txt  below_text_13.txt  below_text_130.txt  below_text_136.txt  below_text_137.txt  below_text_138.txt  below_text_14.txt  below_text_143.txt  below_text_144.txt  below_text_146.txt  below_text_147.txt  below_text_148.txt  below_text_149.txt  below_text_150.txt  below_text_153.txt  (+348 more)
(+155 files in other folders)
