[tool.poetry]
name = "vlm-dataset-creation"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.3.20"
pandas = "^2.2.3"
ipykernel = "^6.29.5"
langchain-community = "^0.3.19"
unstructured = {extras = ["md"], version = "^0.16.23"}
nltk = "^3.9.1"
readmdict = "^0.1.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
